--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,7 +18,15 @@ main {
 form {
   display: inline;
 }
-
+@media only screen and (max-width: 600px) {
+  .centered{
+    width: 100%;
+  }
+}
+.centered
+{
+  text-align: center;
+}
 .main-header {
   width: 100%;
   height: 3.5rem;
