--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -3,16 +3,14 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
-        <main class="centered">
+        <main class="centered" style="width:100%;height:100%;">
             <h1><%= product.title %></h1>
             <hr>
             <div>
-                <img src="<%= product.imageUrl %>" alt="<%= product.title %>" >
+                <img style="height: 80%;width: 80%;" src="<%= product.imageUrl %>" alt="<%= product.title %>" >
             </div>
             <h2><%= product.price %> $</h2>
             <p><%= product.description %></p>
-            <form action="/cart" method="POST">
-               <button class="btn" type="submit">Add To Cart</button>
-            </form>
+            <%- include('../includes/add-to-cart.ejs') %>
         </main>
-        <%- include('../includes/end.ejs') %>
+        <%- include('../includes/end.ejs',{product:product}) %>
